2011-05-20  Jason Merrill  <jason@redhat.com>

	PR c++/48873
	* tree.c (stabilize_expr): Don't make gratuitous copies of classes.

2011-05-09  Jason Merrill  <jason@redhat.com>

	PR c++/48936
	* decl2.c (mark_used): Instantiate constant variables even
	in unevaluated context.

2011-04-26  Jason Merrill  <jason@redhat.com>

	PR c++/42687
	* parser.c (cp_parser_primary_expression): Set *idk to
	CP_ID_KIND_NONE for a parenthesized identifier.

2011-04-20  Jason Merrill  <jason@redhat.com>

	PR c++/48594
	* decl2.c (build_offset_ref_call_from_tree): Fix calling a functor
	or pointer to (non-member) function.

2011-04-16  Release Manager

	* GCC 4.4.6 released.

2011-03-09  Jason Merrill  <jason@redhat.com>

	PR c++/44629
	* pt.c (unify): An unresolved overload is a nondeduced context.

2011-03-08  Jason Merrill  <jason@redhat.com>

	PR c++/45651
	* pt.c (instantiate_decl): Don't clear DECL_INTERFACE_KNOWN on
	!TREE_PUBLIC decls.

2011-03-08  Jason Merrill  <jason@redhat.com>

	PR c++/47289
	* pt.c (coerce_template_parms): Fix error recovery.

2011-03-08  Dodji Seketeli  <dodji@redhat.com>

	* name-lookup.c (binding_to_template_parms_of_scope_p): Only
	consider scopes of primary template definitions.  Adjust comments.

2011-03-08  Jason Merrill  <jason@redhat.com>

	PR c++/47488
	* mangle.c (write_template_arg_literal) [STRING_CST]: Sorry.

2011-02-03  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR c++/47589
	Backport from mainline
	2010-11-09  Jakub Jelinek  <jakub@redhat.com>

	PR c++/45894
	* tree.c (lvalue_kind): Don't crash if ref has NULL type.

2010-12-07  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-11-20  Jakub Jelinek  <jakub@redhat.com>
 
	PR c++/46538
	* decl.c (cp_make_fname_decl): Return error_mark_node if
	current_binding_level has already sk_function_parms kind.

2010-10-18  Jakub Jelinek  <jakub@redhat.com>

	PR c/46015
	* semantics.c (finish_goto_stmt): Call mark_rvalue_use on computed
	goto destination.

2010-10-01  Release Manager
