@@ -1,3 +1,10 @@
+2010-12-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/46815
+	* cp-gimplify.c (cp_genericize): When changing RESULT_DECL
+	into invisible reference, change also DECL_VALUE_EXPR of
+	NRV optimized variable.
+
 2011-05-20  Jason Merrill  <jason@redhat.com>
 
 	PR c++/48873
